<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Tsuki Reader</string>
    <string name="local_storage">Local storage</string>
    <string name="favourites">Favorites</string>
    <string name="history">History</string>
    <string name="error_occurred">An error occurred</string>
    <string name="network_error">Network error</string>
    <string name="details">Details</string>
    <string name="chapters">Chapters</string>
    <string name="list">Liste</string>
    <string name="detailed_list">Detailed list</string>
    <string name="grid">Grid</string>
    <string name="cover_only">Cover only</string>
    <string name="list_mode">List mode</string>
    <string name="settings">Settings</string>
    <string name="remote_sources">Manga sources</string>
    <string name="loading_">Loading…</string>
    <string name="computing_">Computing…</string>
	<string name="chapter_d_of_d">Chapter %1$d of %2$d</string>
    <string name="close">Close</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="clear_history">Clear history</string>
    <string name="nothing_found">Nothing found</string>
    <string name="history_is_empty">No history yet</string>
    <string name="read">Read</string>
    <string name="you_have_not_favourites_yet">No favorites yet</string>
    <string name="add_to_favourites">Favorite this</string>
    <string name="add_new_category">New category</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="share_s">Share %s</string>
    <string name="search">Search</string>
    <string name="search_manga">Search manga</string>
    <string name="manga_downloading_">Downloading…</string>
    <string name="processing_">Processing…</string>
    <string name="download_complete">Downloaded</string>
    <string name="downloads">Downloads</string>
    <string name="by_name">Name</string>
    <string name="popular">Popular</string>
    <string name="updated">Updated</string>
    <string name="newest">Newest</string>
    <string name="by_rating">Rating</string>
    <string name="sort_order">Sorting order</string>
    <string name="filter">Filter</string>
    <string name="saved_filters">Saved filters</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system</string>
    <string name="pages">Pages</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="_s_deleted_from_local_storage">\"%s\" deleted from local storage</string>
    <string name="save_page">Save page</string>
    <string name="page_saved">Page saved</string>
    <string name="pages_saved">Pages saved</string>
    <string name="share_image">Share image</string>
    <string name="_import">Import</string>
    <string name="delete">Delete</string>
    <string name="operation_not_supported">This operation is not supported</string>
    <string name="text_file_not_supported">Either pick a ZIP, PDF or CBZ file.</string>
    <string name="no_description">No description</string>
    <string name="clear_pages_cache">Clear page cache</string>
    <string name="text_file_sizes">B|kB|MB|GB|TB</string>
    <string name="standard">Standard</string>
    <string name="webtoon">Webtoon</string>
    <string name="read_mode">Read mode</string>
    <string name="downscale_image">Downscale image</string>
    <string name="downscale_off">Off</string>
	<string name="downscale_2x" translatable="false">2x</string>
	<string name="downscale_4x" translatable="false">4x</string>
	<string name="downscale_8x" translatable="false">8x</string>
    <string name="grid_size">Grid size</string>
    <string name="search_on_s">Search on %s</string>
    <string name="delete_manga">Delete manga</string>
    <string name="text_delete_local_manga">Permanently delete \"%s\" from device?</string>
    <string name="reader_settings">Reader settings</string>
    <string name="switch_pages">Switch pages</string>
    <string name="_continue">Continue</string>
    <string name="error">Error</string>
    <string name="clear_thumbs_cache">Clear thumbnails cache</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_history_cleared">Cleared</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="domain">Domain</string>
    <string name="app_update_available">A new version of the app is available</string>
    <string name="open_in_browser">Open in web browser</string>
    <string name="notifications">Notifications</string>
    <string name="enabled_d_of_d" tools:ignore="PluralsCandidate">%1$d of %2$d on</string>
    <string name="new_chapters">New chapters</string>
    <string name="download">Download</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notification_sound">Notification sound</string>
    <string name="light_indicator">LED indicator</string>
    <string name="vibration">Vibration</string>
    <string name="favourites_categories">Favorite categories</string>
    <string name="remove_category">Remove</string>
    <string name="text_empty_holder_primary">It\'s kind of empty here…</string>
    <string name="text_search_holder_secondary">Try to reformulate the query.</string>
    <string name="text_history_holder_primary">What you read will be displayed here</string>
    <string name="text_history_holder_secondary">Find what to read in the «Explore» section</string>
    <string name="text_empty_holder_secondary_filtered">There are no manga matching the filters you selected</string>
    <string name="text_local_holder_primary">Save something first</string>
    <string name="text_local_holder_secondary">Save something from an online catalog or import it from a file.</string>
    <string name="manga_shelf">Shelf</string>
    <string name="recent_manga">Recent</string>
    <string name="pages_animation">Page animation</string>
    <string name="manga_save_location">Downloads folder</string>
    <string name="not_available">Not available</string>
    <string name="cannot_find_available_storage">No available storage</string>
    <string name="other_storage">Other storage</string>
    <string name="done">Done</string>
    <string name="all_favourites">All favorites</string>
    <string name="favourites_category_empty">Empty category</string>
    <string name="read_later">Read later</string>
    <string name="updates">Updates</string>
    <string name="text_feed_holder">New chapters of what you are reading are shown here</string>
    <string name="search_results">Search results</string>
    <string name="new_version_s">New version: %s</string>
    <string name="size_s">Size: %s</string>
    <string name="clear_updates_feed">Clear updates feed</string>
    <string name="updates_feed_cleared">Cleared</string>
    <string name="rotate_screen">Rotate screen</string>
    <string name="update">Update</string>
    <string name="scale_mode">Scale mode</string>
    <string name="show_pages_numbers">Numbered pages</string>
    <string name="preload_pages">Preload pages</string>
    <string name="default_mode">Default mode</string>
    <string name="detect_reader_mode">Autodetect reader mode</string>
    <string name="detect_reader_mode_summary">Automatically detect if manga is webtoon</string>
    <string name="reader_info_bar">Show information bar in reader</string>
    <string name="reader_control_ltr_summary">Do not adjust the page switching direction to the reader mode, e. g. pressing the right key always switches to the next page. This option affects only hardware input devices</string>
    <string name="reader_control_ltr">Ergonomic reader control</string>
    <string name="webtoon_zoom">Webtoon zoom</string>
    <string name="webtoon_zoom_summary">Allow zoom in gesture in webtoon mode</string>
    <string name="reader_info_bar_summary">Show the current time and reading progress at the top of the screen</string>
    <string name="show_pages_numbers_summary">Show page numbers in bottom corner</string>
    <string name="background">Background</string>
    <string name="search_hint">Enter manga title, genre or source name</string>
    <string name="reader_zoom_buttons">Show zoom buttons</string>
    <string name="reader_zoom_buttons_summary">Whether to show zoom control buttons in the bottom right corner</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Do not turn the screen off while you\'re reading manga</string>
    <string name="enhanced_colors_summary">Reduces banding, but may impact performance</string>
    <string name="enhanced_colors">32-bit color mode</string>
    <string name="reader_optimize">Reduce memory consumption (beta)</string>
    <string name="reader_optimize_summary">Reduce offscreen pages quality to use less memory</string>
    <string name="reader_actions">Reader actions</string>
    <string name="reader_actions_summary">Configure actions for tappable screen areas</string>
    <string name="switch_pages_volume_buttons">Enable volume buttons</string>
    <string name="switch_pages_volume_buttons_summary">Use volume buttons for switching pages</string>
    <string name="reader_navigation_inverted">Invert navigation controls</string>
    <string name="reader_navigation_inverted_summary">Swap the direction of volume button and directional hardware key navigation (left/up/down/right)</string>
    <string name="default_webtoon_zoom_out">Default webtoon zoom out</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="reader_fullscreen_summary">Hide system status and navigation bars</string>
    <string name="webtoon_gaps">Gaps in webtoon mode</string>
    <string name="webtoon_gaps_summary">Show vertical gaps between pages in webtoon mode</string>
    <string name="enable_pull_gesture_title">Enable pull gesture</string>
    <string name="enable_pull_gesture_summary">Use pull gesture to switch chapters in webtoon</string>
    <string name="crop_pages">Crop pages</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="reader_chapter_toast">Show chapter change popup</string>
    <string name="reader_chapter_toast_summary">Show a pop-up message with a chapter title when it is changed</string>
    <string name="reader_info_bar_transparent">Transparent reader information bar</string>
    <string name="reader_controls_in_bottom_bar">Reader controls in bottom bar</string>
    <string name="details_ui">Details screen style</string>
    <string name="reader_multitask">Open reader in a separate task</string>
    <string name="reader_multitask_summary">Allows you to keep multiple readers with different manga open at the same time</string>
	<string name="details_backdrop">Set large cover as backdrop</string>
	<string name="details_backdrop_summary">Show a large cover image at the top as a backdrop image (like Tachiyomi)</string>
	<string name="details_backdrop_blur">Backdrop blur intensity</string>
	<string name="details_appearance">Details screen appearance</string>
	<string name="preview">Preview</string>
	<string name="reader_appearance">Reader interface</string>
	<string name="reader_appearance_summary">Customize layout, gestures and opacity in reader interface</string>
	<string name="reader_top_bar_opacity">Title bar opacity</string>
	<string name="reader_bottom_bar_opacity">Action bar opacity</string>
	<string name="is_float_bar">Floating action bar</string>
	<string name="is_float_bar_summary">Display the reader action bar (at the bottom) as a floating bar instead of a dock bar</string>
</resources>