<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/reader_settings">

	<ListPreference
		android:entries="@array/reader_modes"
		android:key="reader_mode"
		android:title="@string/default_mode"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="reader_mode_detect"
		android:summary="@string/detect_reader_mode_summary"
		android:title="@string/detect_reader_mode" />

	<ListPreference
		android:entries="@array/zoom_modes"
		android:key="zoom_mode"
		android:title="@string/scale_mode"
		app:allowDividerAbove="true"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="webtoon_zoom"
		android:summary="@string/webtoon_zoom_summary"
		android:title="@string/webtoon_zoom" />

	<com.alix.tsuki.settings.utils.SliderPreference
		android:dependency="webtoon_zoom"
		android:key="webtoon_zoom_out"
		android:stepSize="10"
		android:title="@string/default_webtoon_zoom_out"
		android:valueFrom="0"
		android:valueTo="50"
		app:defaultValue="0"
		app:tickVisible="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="webtoon_gaps"
		android:summary="@string/webtoon_gaps_summary"
		android:title="@string/webtoon_gaps" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_taps_ltr"
		android:summary="@string/reader_control_ltr_summary"
		android:title="@string/reader_control_ltr" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_volume_buttons"
		android:summary="@string/switch_pages_volume_buttons_summary"
		android:title="@string/switch_pages_volume_buttons" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_navigation_inverted"
		android:summary="@string/reader_navigation_inverted_summary"
		android:title="@string/reader_navigation_inverted" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="enhanced_colors"
		android:summary="@string/enhanced_colors_summary"
		android:title="@string/enhanced_colors"
		app:allowDividerAbove="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_optimize"
		android:summary="@string/reader_optimize_summary"
		android:title="@string/reader_optimize" />

	<MultiSelectListPreference
		android:entries="@array/reader_crop"
		android:entryValues="@array/values_reader_crop"
		android:key="reader_crop"
		android:title="@string/crop_pages" />

	<PreferenceScreen
		android:fragment="com.alix.tsuki.settings.reader.ReaderPreviewSettingsFragment"
		android:key="reader_appearance_nav"
		android:summary="@string/reader_appearance_summary"
		android:title="@string/reader_appearance"
		app:allowDividerAbove="true" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="reader_screen_on"
		android:summary="@string/keep_screen_on_summary"
		android:title="@string/keep_screen_on" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="reader_multitask"
		android:summary="@string/reader_multitask_summary"
		android:title="@string/reader_multitask" />

	<ListPreference
		android:defaultValue="2"
		android:entries="@array/network_policy"
		android:entryValues="@array/values_network_policy"
		android:key="pages_preload"
		android:title="@string/preload_pages"
		app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
