<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/reader_appearance">

	<PreferenceCategory
		android:title="@string/preview"
		app:allowDividerAbove="false"
		app:allowDividerBelow="false">

		<com.alix.tsuki.settings.reader.ReaderPreviewSettingsPreference
			android:key="reader_appearance_preview"
			android:persistent="false"
			android:selectable="false" />

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/reader_appearance"
		app:allowDividerAbove="true">

		<ListPreference
			android:entries="@array/screen_orientations"
			android:key="reader_orientation"
			android:title="@string/screen_orientation"
			app:useSimpleSummaryProvider="true" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="reader_fullscreen"
			android:summary="@string/reader_fullscreen_summary"
			android:title="@string/fullscreen_mode" />

		<ListPreference
			android:entries="@array/reader_backgrounds"
			android:key="reader_background"
			android:title="@string/background"
			app:useSimpleSummaryProvider="true" />

		<ListPreference
			android:entries="@array/reader_animation"
			android:key="reader_animation2"
			android:title="@string/pages_animation"
			app:useSimpleSummaryProvider="true"
			app:allowDividerAbove="true" />

		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="pages_numbers"
			android:summary="@string/show_pages_numbers_summary"
			android:title="@string/show_pages_numbers" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="reader_bar"
			android:summary="@string/reader_info_bar_summary"
			android:title="@string/reader_info_bar"
			app:allowDividerAbove="true" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:dependency="reader_bar"
			android:key="reader_bar_transparent"
			android:title="@string/reader_info_bar_transparent" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="is_float_bar"
			android:summary="@string/is_float_bar_summary"
			android:title="@string/is_float_bar" />

		<MultiSelectListPreference
			android:entries="@array/reader_controls"
			android:key="reader_controls"
			android:title="@string/reader_controls_in_bottom_bar" />

		<com.alix.tsuki.settings.utils.SliderPreference
			android:defaultValue="50"
			android:key="reader_top_bar_opacity"
			android:stepSize="5"
			android:title="@string/reader_top_bar_opacity"
			android:valueFrom="50"
			android:valueTo="100" />

		<com.alix.tsuki.settings.utils.SliderPreference
			android:defaultValue="50"
			android:key="reader_bottom_bar_opacity"
			android:stepSize="5"
			android:title="@string/reader_bottom_bar_opacity"
			android:valueFrom="50"
			android:valueTo="100" />

		<Preference
			android:key="reader_tap_actions"
			android:persistent="false"
			android:summary="@string/reader_actions_summary"
			android:title="@string/reader_actions" />

		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="webtoon_pull_gesture"
			android:summary="@string/enable_pull_gesture_summary"
			android:title="@string/enable_pull_gesture_title" />

		<SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="reader_zoom_buttons"
			android:summary="@string/reader_zoom_buttons_summary"
			android:title="@string/reader_zoom_buttons" />

		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="reader_chapter_toast"
			android:summary="@string/reader_chapter_toast_summary"
			android:title="@string/reader_chapter_toast" />

	</PreferenceCategory>

</PreferenceScreen>
